# SNGuess

./: .gitignore  LICENSE  README.md  setup.cfg
notebooks/: README.md  README.rst  ZTF21abbyhvw.csv  bts_transient_query.ipynb  env.yml  env_linux_64.txt  logreg_results.ipynb  roc_curve.ipynb  snguess_results.ipynb  snguess_training.ipynb  snguess_training_data.ipynb  snguess_ztf_alert.ipynb
notebooks/data/: .gitignore
notebooks/plots/: .gitignore
snguess/: data.py
