[metadata]
name = snguess
version = 0.1
author = nmiranda
author_email = nicolas.miranda@hu-berlin.de
description = SNGuess
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nmiranda/SNGuess
# project_urls =
#     Bug Tracker = 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
packages = snguess
python_requires = >=3.9
install_requires =
    ampel-ztf >= 0.7.4.post1
    pandas
    scikit-learn
    xgboost
    seaborn

[options.packages.find]
where = snguess