[metadata]
name = snguess
version = 0.1.2a
author = nmiranda
author_email = nicolas.miranda@hu-berlin.de
description = SNGuess
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nmiranda/SNGuess
# project_urls =
#     Bug Tracker = 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
packages = snguess
python_requires = >=3.10
install_requires =
    ampel-hu-astro @ git+https://github.com/AmpelProject/Ampel-HU-astro.git@0c1786565c003a5208237f4b6099d3145488a526
    ampel-ztf >= 0.8.3a2
    scikit-learn
    xgboost
    pandas
    numpy
    astropy
    seaborn

[options.packages.find]
where = snguess